Here's the commented version of the code:

```c++
// Copyright 2019 gRPC authors.

#ifndef GRPCPP_SECURITY_ALTS_CONTEXT_H
#define GRPCPP_SECURITY_ALTS_CONTEXT_H

#include <grpc/grpc_security_constants.h>
#include <grpcpp/security/auth_context.h>

#include <map>
#include <memory>

// Forward declaration of C-style ALTS context structure
struct grpc_gcp_AltsContext;

namespace grpc {
namespace experimental {

// Class representing ALTS (Application Layer Transport Security) context
// Contains security information about an ALTS-authenticated connection
class AltsContext {
 public:
  // Nested structure representing RPC protocol version information
  struct RpcProtocolVersions {
    // Nested structure representing a single version (major.minor)
    struct Version {
      int major_version;  // Major version number
      int minor_version;  // Minor version number
    };
    Version max_rpc_version;  // Maximum supported RPC version
    Version min_rpc_version;  // Minimum supported RPC version
  };

  // Constructor that creates AltsContext from C-style grpc_gcp_AltsContext
  explicit AltsContext(const grpc_gcp_AltsContext* ctx);
  
  // Default copy constructor and assignment operator
  AltsContext& operator=(const AltsContext&) = default;
  AltsContext(const AltsContext&) = default;

  // Getters for various ALTS context properties:
  
  // Returns the application protocol negotiated during handshake
  std::string application_protocol() const;
  
  // Returns the record protocol negotiated during handshake
  std::string record_protocol() const;
  
  // Returns the peer's service account
  std::string peer_service_account() const;
  
  // Returns the local service account
  std::string local_service_account() const;
  
  // Returns the security level of the connection
  grpc_security_level security_level() const;
  
  // Returns the peer's supported RPC protocol versions
  RpcProtocolVersions peer_rpc_versions() const;
  
  // Returns a map of peer attributes (key-value pairs)
  const std::map<std::string, std::string>& peer_attributes() const;

 private:
  // Private member variables storing ALTS context information:
  std::string application_protocol_;       // Negotiated application protocol
  std::string record_protocol_;            // Negotiated record protocol
  std::string peer_service_account_;       // Peer's service account
  std::string local_service_account_;      // Local service account
  grpc_security_level security_level_ = GRPC_SECURITY_NONE;  // Connection security level
  RpcProtocolVersions peer_rpc_versions_ = {{0, 0}, {0, 0}}; // Peer's RPC versions
  std::map<std::string, std::string> peer_attributes_map_;   // Peer attributes
};

}  // namespace experimental
}  // namespace grpc

#endif  // GRPCPP_SECURITY_ALTS_CONTEXT_H
```

The comments provide:
1. File header information
2. Explanation of the class purpose (ALTS context representation)
3. Documentation for nested structures and their members
4. Explanation of each public method's purpose
5. Documentation for private member variables
6. Clear namespace closing comments
7. Header guard explanation

The comments are concise yet informative, helping future developers understand both the high-level purpose and detailed implementation of the ALTS context class.